--- a/src/app/github/github.component.html
+++ b/src/app/github/github.component.html
@@ -1,16 +1,23 @@
-
-<h3>Github Users</h3>
-<div *ngIf="users" class="user-grid">
-    <section class="user-card" *ngFor="let user of users">
-        <div class="image-container">
-            <img src="{{user.avatar_url}}" alt="user profile pic"/>
-        </div>
-        <div class="user-info">
-            <p>{{user.login}}</p>
-            <a href="{{user.html_url}}" target="_black">Profile</a>
-        </div>
-    </section>
+<div (window:resize)="getWindowSize()">
+    <h3>Github Users</h3>
+    <p *ngIf="currentWindowSize">Current Window size: {{currentWindowSize}}px</p>
+    
+        <input [(ngModel)]="username"  type="text" placeholder="Enter Github username" >
+        <button (click)="getUser()">Add User</button>
+    
+    <div *ngIf="users" class="user-grid">
+        <section class="user-card" *ngFor="let user of users">
+            <div class="image-container">
+                <img src="{{user.avatar_url}}" alt="user profile pic" />
+            </div>
+            <div class="user-info">
+                <p>{{user.login}}</p>
+                <a href="{{user.html_url}}" target="_black">Profile</a>
+            </div>
+        </section>
+    </div>
 </div>
+
 
 
 
