--- a/src/app/guess-game/guess-game.component.css
+++ b/src/app/guess-game/guess-game.component.css
@@ -1,9 +1,6 @@
-.allowSubmit,
-.show-result {
-  display: block;
+.guess-correct {
+  color: green;
 }
-
-.disallowSubmit,
-.hide-result {
-  display: none;
+.guess-fail {
+  color: red;
 }
