--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,6 @@ h6 {
   border: 0px;
   margin: 0px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
