added task items

--- a/src/app/pages/task-manager/task-manager/task-manager.component.html
+++ b/src/app/pages/task-manager/task-manager/task-manager.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <app-header></app-header>
-    <app-button text="Add" color="green"></app-button>
+    <app-tasks></app-tasks>
 </div>
 
 
