--- a/src/app/pages/task-manager/components/header/header.component.html
+++ b/src/app/pages/task-manager/components/header/header.component.html
@@ -1,3 +1,4 @@
-<header>
-    <h1>{{title}}</h1>
+<header fxLayout="row" fxLayoutAlign="space-between center">
+    <h2>{{title}}</h2>
+    <app-button text="Add" color="green" (btnClick)="toggleTask()"></app-button>
 </header>
