--- a/src/app/pages/task-manager/components/task-item/task-item.component.html
+++ b/src/app/pages/task-manager/components/task-item/task-item.component.html
@@ -1,5 +1,12 @@
-<div class="task">
-    <h3>{{task.text}} <fa-icon [icon]="faTimes" (click)="onClick(task)" [ngStyle]="{'color':'red'}"></fa-icon></h3>
-    
+<div [ngClass]="{reminder:task.reminder}" 
+    class="task"
+    (click)="onToggle(task)"
+>
+    <h3>
+        {{task.text}} 
+        <fa-icon [icon]="faTimes" (click)="onClick(task)"
+                 [ngStyle]="{'color':'red'}">
+        </fa-icon>
+    </h3>
     <p>{{task.day}}</p>
 </div>
