--- a/src/app/pages/task-manager/components/tasks/tasks.component.html
+++ b/src/app/pages/task-manager/components/tasks/tasks.component.html
@@ -1,3 +1,5 @@
+
+ <app-add-task (addTask)="onAddTask($event)" [showAddTask]="showAddTask"></app-add-task>
 <app-task-item *ngFor="let task of tasks"
  [task]="task" 
  (deleteTaskEvent)="deleteTask(task)"
