--- a/src/app/pages/task-manager/components/add-task/add-task.component.html
+++ b/src/app/pages/task-manager/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="showAddTask" class="add-form" (ngSubmit)="onSubmit()">
+<form *ngIf="showAddTask" class="add-form" (ngSubmit)="onSubmit()" [formGroup]="newTaskData">
     <div class="form-control">
       <label for="text">Task</label>
       <input
@@ -7,6 +7,7 @@
         [(ngModel)]="text"
         id="text"
         placeholder="Add Task"
+        formControlName="textCtrl"
       />
     </div>
     <div class="form-control">
