--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<div class="home-container">
+    <header>
+        <h1>React Projects</h1>
+    </header>
+    
+    <h2>Basic Projects</h2>
+    <div id="home-half-border"></div>
+    
+    <div class="external-card">
+        <figure class="external-card-img-container">
+            <img src="../../../assets/images/github.png" alt="Github Users">
+            <figcaption> Birthday Counter</figcaption>
+        </figure>
+        <div class="external-card-bt">
+            <a routerLink="/github-users"  target="_blank">
+                <i class="fas fa-link"> View</i>
+            </a>
+            <a href="https://github.com/Ayiamco/firstreact/blob/master/src/js/Exercise1.js" target="_blank" rel="noreferrer">
+                <i className="fas fa-link"> View Code</i>
+             </a>
+             
+        </div>
+    </div> 
+    
+    <footer>
+        <p>UI Design  gotten from <br/> <a href="https://react-projects.netlify.app/">John Smillga React Site</a> </p>
+        <p>Code by <a href="https://react-projects.netlify.app/">Joseph Achonu</a></p>
+        <div >
+            <a href="https://react-projects.netlify.app/"><i className="fab fa-twitter-square"></i></a>
+            <a href="https://react-projects.netlify.app/"><i className="fab fa-linkedin"></i></a>
+            <a href="https://react-projects.netlify.app/"><i className="fab fa-facebook-square"></i></a>
+        </div>
+    </footer>
+
+</div>
+
+
+
+
+
