--- a/src/app/pages/github/github.component.css
+++ b/src/app/pages/github/github.component.css
@@ -1,5 +1,11 @@
 /* Pageheader component styles */
-
+.page-header{
+  padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 .user-grid {
   width: 100%;
   margin-top: 3em;
