--- a/src/app/pages/github/github.component.html
+++ b/src/app/pages/github/github.component.html
@@ -1,9 +1,11 @@
 <div (window:resize)="getWindowSize()">
-    <h3>Github Users</h3>
-    <p *ngIf="currentWindowSize">Current Window size: {{currentWindowSize}}px</p>
-    
+    <div class="page-header">
+        <h3>Github Users</h3>
+        <h5 *ngIf="currentWindowSize">Current Window size: {{currentWindowSize}}px</h5>
         <input [(ngModel)]="username"  type="text" placeholder="Enter Github username" >
         <button (click)="getUser()">Add User</button>
+    </div>
+    
     
     <div *ngIf="users" class="user-grid">
         <section class="user-card" *ngFor="let user of users">
