--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,21 +6,53 @@
     <h2>Basic Projects</h2>
     <div id="home-half-border"></div>
     
-    <div class="external-card">
-        <figure class="external-card-img-container">
-            <img src="../../../assets/images/github.png" alt="Github Users">
-            <figcaption> Birthday Counter</figcaption>
-        </figure>
-        <div class="external-card-bt">
-            <a routerLink="/github-users"  target="_blank">
-                <i class="fas fa-link"> View</i>
-            </a>
-            <a href="https://github.com/Ayiamco/firstreact/blob/master/src/js/Exercise1.js" target="_blank" rel="noreferrer">
-                <i className="fas fa-link"> View Code</i>
-             </a>
-             
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+        <div class="external-card">
+            <figure class="external-card-img-container">
+                <img src="../../../assets/images/github.png" alt="Github Users">
+                <figcaption> Github Users</figcaption>
+            </figure>
+            <div class="external-card-bt">
+                <a routerLink="/github-users"  target="_blank">
+                    <i class="fas fa-link"> View</i>
+                </a>
+                <a href="https://github.com/Ayiamco/firstreact/blob/master/src/js/Exercise1.js" target="_blank" rel="noreferrer">
+                    <i className="fas fa-link"> View Code</i>
+                 </a>
+                 
+            </div>
         </div>
-    </div> 
+        <div class="external-card">
+            <figure class="external-card-img-container">
+                <img src="../../../assets/images/smile.png" alt="Github Users">
+                <figcaption> Smile Capture</figcaption>
+            </figure>
+            <div class="external-card-bt">
+                <a routerLink="/smile"  target="_blank">
+                    <i class="fas fa-link"> View</i>
+                </a>
+                <a href="https://github.com/Ayiamco/firstreact/blob/master/src/js/Exercise1.js" target="_blank" rel="noreferrer">
+                    <i className="fas fa-link"> View Code</i>
+                 </a>
+                 
+            </div>
+        </div> 
+        <div class="external-card">
+            <figure class="external-card-img-container">
+                <img src="../../../assets/images/github.png" alt="Github Users">
+                <figcaption>Guess Game </figcaption>
+            </figure>
+            <div class="external-card-bt">
+                <a routerLink="/smile"  target="_blank">
+                    <i class="fas fa-link"> View</i>
+                </a>
+                <a href="https://github.com/Ayiamco/firstreact/blob/master/src/js/Exercise1.js" target="_blank" rel="noreferrer">
+                    <i className="fas fa-link"> View Code</i>
+                 </a>
+                 
+            </div>
+        </div> 
+    </div>
     
     <footer>
         <p>UI Design  gotten from <br/> <a href="https://react-projects.netlify.app/">John Smillga React Site</a> </p>
