--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -170,8 +170,10 @@
     footer i {
       font-size: 2em;
       margin: 0px 0.5em;
+      
     }
     footer {
+      background-color: gray;
       flex-direction: row;
       justify-content: space-around;
       padding: 0.5em;
